# Scientist-Skill

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/scientist-taste/: SKILL.md
scientist_taste/: __init__.py  cli.py
scientist_taste/config/: profiles.py
scientist_taste/core/: evaluator.py
scientist_taste/data/profiles/: nobel_related.json  wikipedia_profiles.json  wikiquotes.json
scientist_taste/skills/: taste_skill.py
scientist_taste/utils/: formatting.py
scripts/: download_real_data.py
tests/: test_profiles.py
